fix scrolling layout issues

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -7,9 +7,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  position: fixed;
-  top: 0;
-  width: 100%;
+  // position: fixed;
+  // top: 0;
+  // width: 100%;
   z-index: 100;
 }
 
