--- a/src/components/layouts/layout.module.scss
+++ b/src/components/layouts/layout.module.scss
@@ -22,14 +22,20 @@
 
 .content {
   grid-area: content;
-  width: 100%;
-  max-width: 100vw;
-  margin-top: $header-height;
+  // width: 100%;
+  // max-width: 100vw;
+  // margin-top: $header-height;
+  overflow: hidden;
   background: var(--content-background);
   color: var(--text-color);
 
   h1, h2, h3 {
     color: var(--text-color);
+  }
+
+  & > div:first-child {
+    overflow: auto;
+    height: 100%;
   }
 }
 
@@ -49,9 +55,9 @@
 .menu {
   padding-top: calc(#{$header-height} + 1rem);
   opacity: 0;
-  background: $sidebar-background;
+  background: var(--sidebar-background);
   transform: translateX(-100%);
-  transition: all 200ms;
+  transition: opacity 200ms, transform 200ms;
   position: absolute;
   height: 100%;
   width: 100%;
