--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,7 @@ $menu-item-hover-background-color: #DDE7E6;
 html, body {
   margin: 0;
   height: 100%;
+  overflow: hidden;
 }
 
 #___gatsby, #gatsby-focus-wrapper {
